--- a/Need a Decision!/Base.lproj/Main.storyboard
+++ b/Need a Decision!/Base.lproj/Main.storyboard
@@ -26,10 +26,17 @@
                                     <color key="baseForegroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                 </buttonConfiguration>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coin1" translatesAutoresizingMaskIntoConstraints="NO" id="Ekj-fh-TKd">
+                                <rect key="frame" x="95.342245989304274" y="225.99999999999852" width="200" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.22352941179999999" green="0.24313725489999999" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="coinImageViewOne" destination="Ekj-fh-TKd" id="qNw-hS-qSz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -37,6 +44,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="coin1" width="360" height="360"/>
         <image name="dollarsign" catalog="system" width="89" height="128"/>
     </resources>
 </document>
