--- a/Need a Decision!/Base.lproj/Main.storyboard
+++ b/Need a Decision!/Base.lproj/Main.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yi6-Xi-8tN">
-                                <rect key="frame" x="275" y="173" width="43" height="506"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yi6-Xi-8tN">
+                                <rect key="frame" x="175" y="549" width="43" height="44"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain">
                                     <imageReference key="image" image="dollarsign" catalog="system" symbolScale="large" variableValue="0.0"/>
@@ -28,22 +28,16 @@
                                     <action selector="coinButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RAd-8U-r29"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coin1" translatesAutoresizingMaskIntoConstraints="NO" id="Ekj-fh-TKd">
-                                <rect key="frame" x="16.666666666666657" y="163" width="360" height="506"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="coin1" translatesAutoresizingMaskIntoConstraints="NO" id="Ekj-fh-TKd">
+                                <rect key="frame" x="16.666666666666657" y="311" width="360" height="230"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.22352941179999999" green="0.24313725489999999" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="yi6-Xi-8tN" firstAttribute="bottom" secondItem="Ekj-fh-TKd" secondAttribute="bottom" constant="10" id="3JB-8d-Ea0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="yi6-Xi-8tN" secondAttribute="bottom" constant="139" id="4if-ZC-uaw"/>
-                            <constraint firstItem="yi6-Xi-8tN" firstAttribute="centerX" secondItem="Ekj-fh-TKd" secondAttribute="centerX" constant="100" id="6qr-Y2-Ugc"/>
-                            <constraint firstItem="yi6-Xi-8tN" firstAttribute="centerY" secondItem="Ekj-fh-TKd" secondAttribute="centerY" constant="100" id="E7i-V2-Tft"/>
-                            <constraint firstItem="Ekj-fh-TKd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Ftv-2m-fjU"/>
-                            <constraint firstItem="yi6-Xi-8tN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Obq-e4-zCZ"/>
-                            <constraint firstItem="Ekj-fh-TKd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wbx-QU-ZRf"/>
-                            <constraint firstItem="yi6-Xi-8tN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Y69-Ox-mv7"/>
-                            <constraint firstItem="yi6-Xi-8tN" firstAttribute="top" secondItem="Ekj-fh-TKd" secondAttribute="top" constant="10" id="qBX-0e-bR8"/>
+                            <constraint firstItem="yi6-Xi-8tN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PKX-HS-ofj"/>
+                            <constraint firstItem="yi6-Xi-8tN" firstAttribute="centerY" secondItem="Ekj-fh-TKd" secondAttribute="centerY" id="V3h-Du-nv3"/>
+                            <constraint firstItem="Ekj-fh-TKd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xcq-8n-uA1"/>
                         </constraints>
                     </view>
                     <connections>
